Improve debug env

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "src/app.ts",
   "dependencies": {
+    "chalk": "^3.0.0",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
@@ -38,9 +41,9 @@
     "lint:fix": "eslint --fix src/**/*.ts",
     "tsc": "tsc -p .",
     "build": "npm-run-all clean lint tsc",
-    "start": "node ./dist/app.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' --files ./src/app.ts",
-    "prod": "npm-run-all build start"
+    "start": "NODE_ENV=production node ./dist/app.js",
+    "prod": "npm-run-all build start",
+    "dev": "NODE_ENV=local nodemon --watch 'src/**/*.ts' --exec 'ts-node' --files ./src/app.ts"
   },
   "author": "Hungjoon Kim",
   "license": "ISC"
